# line_works/openapi/storage/models/__init__.py
@@ -14,5 +14,6 @@
 
 
 # import models into model package
+from line_works.openapi.storage.models.resource_extras import ResourceExtras
 from line_works.openapi.storage.models.upload_resouce_response import UploadResouceResponse
 from line_works.openapi.storage.models.upload_resource_reponse_result import UploadResourceReponseResult
